# openpower-vpd-parser

./: .clang-format  .gitignore  1  4900_vpd  All_FRUS_LC_list  MAINTAINERS  Makefile.am  OWNERS  README.md  app.cpp  args.cpp  args.hpp  common_utility.cpp  common_utility.hpp  configure.ac  const.hpp  createEcc.cpp  createEcc.hpp  dbus_properties.json  defines.hpp  endian.hpp  extra-properties-example.yaml  extra-properties.mako.hpp  extra-properties.py  groups  ibm_vpd_app.cpp  ibm_vpd_type_check.cpp  ibm_vpd_type_check.hpp  ibm_vpd_utils.cpp  ibm_vpd_utils.hpp  ibm_vpd_utils_impl.hpp  impl.cpp  impl.hpp  ipz_app.cpp  ipz_args.cpp  ipz_args.hpp  keyword_vpd_main.cpp  keyword_vpd_main.hpp  keyword_vpd_parser.cpp  keyword_vpd_parser.hpp  (+34 more)
active-to-passive/: meson.build
active-to-passive/src/: active_to_passive.cpp
configuration/: configuration.hpp
docs/: Redundant_DIMMs.md  backup-restore-config-json.md  class_diagram.md  file-mode-vpd.md  system-config-json.md  system-json_README.md  system_config_json.md  vpd-tool-helper.md
examples/: 50001000.json  inventory.json  sample_vpd_inventory_for_recollcetion.json  write-eeprom.json
ibm_vpd/: ibm-vpd-parser@.service  wait-vpd-parsers.sh
json/: 50001000.json  vpd_inventory.json
kwd-editor/: README.md  VPDKeywordEditor.cpp  VPDKeywordEditor.hpp  VPD_KeywordEditor_main.cpp  editor.cpp  editor.hpp  editor_impl.cpp  editor_impl.hpp  meson.build  meson_options.txt  server.cpp  vpd_keyword_editor.cpp  vpd_keyword_editor.hpp  vpd_keyword_editor_main.cpp
rules/: 70-ibm-vpd-parser.rules
schema/: inventory_schema.json  main.py
scripts/: wait-vpd-parsers.sh  wait-vpd-status.sh
service_files/: active-to-passive.service  system-vpd.service  vpd-manager.service  wait-vpd-parsers.service
test/: Makefile.am  Testcases-bonnell-systemvpd-backup-restore.xlsx  bono.vpd  ipz.vpd  meson.build  utest_config_manager_validator.cpp  utest_ddimm_parser.cpp  utest_ipz_parser.cpp  utest_json_utility.cpp  utest_keyword_parser.cpp  utest_logger.cpp  utest_utils.cpp
test/ipz_parser/: json_test.cpp  parser.cpp
test/keyword_vpd_parser_test/: kw_vpd_test.cpp
test/parser/: parser.cpp  test.vpd
test/store/: store.cpp
test/vpd-manager-test/: editor_test.cpp  reader_test.cpp  reader_test.hpp  vpd_editor_test.json  vpd_reader_test.json
test/vpd_editor_test/: vpd_editor_test.cpp
test/vpd_manager_test/: vpd_manager_test.cpp
utility/: event_logger_utility.hpp  json_utility.hpp  vpd_specific_utility.hpp
vpd-manager/: bios_handler.cpp  bios_handler.hpp  data_handler.cpp  data_handler.hpp  editor_impl.cpp  editor_impl.hpp  error.cpp  error.hpp  gpioMonitor.cpp  gpioMonitor.hpp  ibm_vpd_parser.cpp  ibm_vpd_parser.hpp  manager.cpp  manager.hpp  manager_main.cpp  meson.build  meson.options  meson_options.txt  reader_impl.cpp  reader_impl.hpp  server.cpp  server.hpp  vpd-manager_template_doxygen  vpd_manager.cpp  vpd_manager.hpp  vpd_manager_main.cpp
vpd-manager/include/: backup_restore.hpp  bios_handler.hpp  config_manager.hpp  constants.hpp  ddimm_parser.hpp  error_codes.hpp  event_logger.hpp  exceptions.hpp  file_logger.hpp  gpio_monitor.hpp  ipz_parser.hpp  isdimm_parser.hpp  keyword_vpd_parser.hpp  listener.hpp  logger.hpp  manager.hpp  parser.hpp  parser_factory.hpp  parser_interface.hpp  single_fab.hpp  thread_manager.hpp  types.hpp  worker.hpp
vpd-manager/include/spdlog/: async.h  async_logger-inl.h  async_logger.h  common-inl.h  common.h  formatter.h  logger-inl.h  logger.h  mdc.h  pattern_formatter-inl.h  pattern_formatter.h  spdlog-inl.h  spdlog.h  stopwatch.h  tweakme.h  version.h
vpd-manager/include/spdlog/cfg/: argv.h  env.h  helpers-inl.h  helpers.h
vpd-manager/include/spdlog/details/: backtracer-inl.h  backtracer.h  circular_q.h  console_globals.h  file_helper-inl.h  file_helper.h  fmt_helper.h  log_msg-inl.h  log_msg.h  log_msg_buffer-inl.h  log_msg_buffer.h  mpmc_blocking_q.h  os-inl.h  os.h  periodic_worker-inl.h  periodic_worker.h  registry-inl.h  registry.h  synchronous_factory.h  tcp_client-windows.h  tcp_client.h  thread_pool-inl.h  thread_pool.h  udp_client-windows.h  udp_client.h
vpd-manager/include/spdlog/fmt/: bin_to_hex.h  fmt.h
vpd-manager/include/spdlog/fmt/bundled/: args.h  base.h  chrono.h  color.h  compile.h  format-inl.h  format.h  os.h  ostream.h  printf.h  ranges.h  std.h  xchar.h
vpd-manager/include/spdlog/sinks/: android_sink.h  ansicolor_sink-inl.h  ansicolor_sink.h  base_sink-inl.h  base_sink.h  basic_file_sink-inl.h  basic_file_sink.h  callback_sink.h  daily_file_sink.h  dist_sink.h  dup_filter_sink.h  hourly_file_sink.h  kafka_sink.h  mongo_sink.h  msvc_sink.h  null_sink.h  ostream_sink.h  qt_sinks.h  ringbuffer_sink.h  rotating_file_sink-inl.h  rotating_file_sink.h  sink-inl.h  sink.h  stdout_color_sinks-inl.h  stdout_color_sinks.h  stdout_sinks-inl.h  stdout_sinks.h  syslog_sink.h  systemd_sink.h  tcp_sink.h  udp_sink.h  win_eventlog_sink.h  wincolor_sink-inl.h  wincolor_sink.h
vpd-manager/include/utility/: common_utility.hpp  dbus_utility.hpp  event_logger_utility.hpp  json_utility.hpp  vpd_specific_utility.hpp
vpd-manager/oem/: ibm_manager.cpp  ibm_manager.hpp
vpd-manager/oem-handler/: ibm_handler.cpp  ibm_handler.hpp
vpd-manager/src/: backup_restore.cpp  bios_handler.cpp  config_manager.cpp  ddimm_parser.cpp  event_logger.cpp  file_logger.cpp  gpio_monitor.cpp  ipz_parser.cpp  isdimm_parser.cpp  keyword_vpd_parser.cpp  listener.cpp  logger.cpp  manager.cpp  manager_main.cpp  parser.cpp  parser_factory.cpp  single_fab.cpp  thread_manager.cpp  vpd_parser_main.cpp  worker.cpp
vpd-tool/: README.md  meson.build
vpd-tool/include/: tool_constants.hpp  tool_types.hpp  tool_utils.hpp  vpd_tool.hpp
vpd-tool/src/: vpd_tool.cpp  vpd_tool_main.cpp
vpdecc/: vpdecc.c  (+3 more)
wait-vpd-parser/: meson.build
wait-vpd-parser/include/: collection_orchestrator.hpp  fru_vpd_collection_manager.hpp  inventory_backup_handler.hpp  prime_inventory.hpp
wait-vpd-parser/src/: collection_orchestrator.cpp  fru_vpd_collection_manager.cpp  inventory_backup_handler.cpp  prime_inventory.cpp  wait_vpd_parser.cpp
(+66 files in other folders)
