option(
    'BUSNAME',
    type: 'string',
    value: 'com.ibm.VPD.Manager',
    description: 'BUS NAME FOR THE SERVICE',
)
option(
    'OBJPATH',
    type: 'string',
    value: '/com/ibm/VPD/Manager',
    description: 'OBJECT PATH FOR THE SERVICE',
)
option(
    'IFACE',
    type: 'string',
    value: 'com.ibm.VPD.Manager',
    description: 'INTERFACE NAME',
)
option('tests', type: 'feature', value: 'enabled', description: 'Build tests')
option(
    'ipz_ecc_check',
    type: 'feature',
    value: 'disabled',
    description: 'enable when ECC check used in IPZ parsering, used for Gtest cases.',
)
option(
    'INVENTORY_JSON_DEFAULT',
    type: 'string',
    value: '/usr/share/vpd/vpd_inventory.json',
    description: 'JSON file that defines inventory blueprint. The default path before system VPD service sets up the symlink.',
)
option(
    'INVENTORY_JSON_SYM_LINK',
    type: 'string',
    value: '/var/lib/vpd/vpd_inventory.json',
    description: 'Symbolic link to vpd inventory json.',
)
option(
    'JSON_ABSOLUTE_PATH_PREFIX',
    type: 'string',
    value: '/usr/share/vpd/',
    description: 'Path that has all system JSONs.',
)
option(
    'SYSTEM_VPD_FILE_PATH',
    type: 'string',
    value: '/sys/bus/i2c/drivers/at24/8-0050/eeprom',
    description: 'EEPROM path of system VPD.',
)
option(
    'VPD_SYMLIMK_PATH',
    type: 'string',
    value: '/var/lib/vpd',
    description: 'Symlink folder for VPD invnetory JSONs',
)
option(
    'PIM_PATH_PREFIX',
    type: 'string',
    value: '/xyz/openbmc_project/inventory',
    description: 'Prefix for PIM inventory paths.',
)
option(
    'ibm_system',
    type: 'feature',
    value: 'enabled',
    description: 'Enable code specific to IBM systems.',
)
option(
    'LOG_FILE_PATH',
    type: 'string',
    value: '/var/lib/vpd/',
    description: 'File path to dump the log.',
)
