option('oe-sdk', type: 'feature', description: 'ENABLE OE SDK FOR OPENPOWER VPD PARSER')
option('tests', type: 'feature', value : 'enabled', description: 'Build tests')
option('FRU_YAML',type: 'string', value: 'writefru.yaml',  description: 'YAML STRING')
option('PROP_YAML',type: 'string', value: 'extra-properties-example.yaml',  description: 'YAML PROPERTY')
option('ibm-parser', type: 'feature', description: 'ENABLE IBM PARSER')
option('INVENTORY_JSON',type: 'string', value: '/usr/share/vpd/vpd_inventory.json',  description: 'JSON file that defines inventory blueprint')
option('INVENTORY_PATH',type: 'string', value: '/xyz/openbmc_project/inventory', description: 'Prefix for inventory D-Bus objects')
option('INVENTORY_MANAGER_SERVICE',type: 'string', value: 'xyz.openbmc_project.Inventory.Manager', description: 'Inventory manager service')
option('IPZ_INTERFACE', type: 'string', value: 'com.ibm.ipzvpd', description: 'IPZ VPD interface')
option('BUSNAME', type : 'string', value : 'com.ibm.vpd.Editor',description : 'BUS NAME FOR THE SERVICE')
option('OBJPATH', type : 'string', value : '/com/ibm/vpd/Editor', description : 'OBJECT PATH FOT THE SERVICE')
option('IFACE', type : 'string', value : 'com.ibm.vpd.Editor', description : 'INTERFACE NAME')
option('kwd-editor', type: 'feature', description: 'ENABLE KWD-EDITOR APPLICATION')
option('OBJECT_MAPPER_SERVICE', type : 'string', value : 'xyz.openbmc_project.ObjectMapper', description : 'Object Mapper service')
option('OBJECT_MAPPER_OBJECT', type : 'string', value : '/xyz/openbmc_project/object_mapper', description : 'One of the objects in Object Mapper service')
option('POWER_SUPPLY_TYPE_INTERFACE', type : 'string', value : 'xyz.openbmc_project.Inventory.Item.PowerSupply', description : 'Power Supply Type Interface')
